--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,5 +13,8 @@ services:
       - mongodb
   mongodb:
     image: mongo:6.0.5
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: user
+      MONGO_INITDB_ROOT_PASSWORD: password
     ports:
       - "27017:27017"
